--- a/project-2/index.html
+++ b/project-2/index.html
@@ -8,8 +8,34 @@
     <link rel="stylesheet" type="text/css" href="main.css" />
 </head>
 <body>
-    
+	<div id="container"> 
+		<h1>Air Quality Checker</h1>
+		<form id="form" onsubmit="onSubmit()" onreset="onReset()">
+			<label for="countries">Select a country:</label>
+			<select name="countries" id="countries">
+				 <option value="no_value">-- Select Country --</option>
+			</select><br>
 
-    <script src="main.js" type="text/javascript"></script>
+			<label for="states">Select a state:</label>
+			<select name="states" id="states">
+				<option value="no_value">-- Select State --</option>
+			</select><br>
+
+			<label for="cities">Select a city:</label>
+			<select name="cities" id="cities">
+				<option value="no_value">-- Select City --</option>
+			</select>
+
+			<br><br>
+			<input type="submit" value="Submit">
+			<input type="reset" value="Reset">
+		</form>
+		<div id="cards">
+			<div class="card" id="weather"></div>
+		</div>
+	</div>
+
+
+  <script src="main.js" type="text/javascript"></script>
 </body>
 </html>
